# learn_webdev

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
frontend/: README.md
frontend/src/app/: page.tsx
frontend/src/components/: ApiDemoClient.tsx
